--- a/index.html
+++ b/index.html
@@ -1,10 +1,103 @@
-NPM Clone Nifty Penguin Magic npm Enterprise Products Solutions Resources Docs Support Search Join Log In Build amazing
-things Essential JavaScript development tools that help you go to market faster and build powerful applications using
-modern open source code. See plans Join for free Bring the best of open source to your company npm is the tool used by
-over 11,000,000 JavaScript developers around the world. Your developers already use it. Your company depends on it.
-Create an Org and get more out of the tools your team already knows and loves. Zero configuration Create an org, add
-your team, and start collaborating. Nothing to configure, set up, or manage. Team management Control who has access to
-what modules within your team namespace using straightforward team management capabilities. Familiar features npm Orgs
-has 100% parity with all the public npm registry features your developers already use. npm audit Enjoy the security
-auditing features built into the npm client, a zero-friction way to make open source software safer. Create an Org
-asdfasfasfsafasf
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>NPM Clone</title>
+  <link href="https://fonts.googleapis.com/css?family=Poppins:400,600,700" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+
+  <header>
+    <div class="top-header">
+      <div class="top-left">
+        <img src="images/black-heart.png" alt="heart" class="heart">
+        <span>Nifty Penguin Magic</span>
+      </div>
+      <nav>
+        <ul>
+          <li><a href="#">npm Enterprise</a></li>
+          <li><a href="#">Products</a></li>
+          <li><a href="#">Solutions</a></li>
+          <li><a href="#">Resources</a></li>
+          <li><a href="#">Docs</a></li>
+          <li><a href="#">Support</a></li>
+        </ul>
+      </nav>
+    </div>
+
+    <div class="bottom-header">
+      <img src="images/npm-logo.png" alt="npm logo" class="logo">
+      <div class="search">
+        <img src="images/magnifying-glass.png" alt="search">
+        <input type="text" placeholder="Search packages">
+        <button>Search</button>
+      </div>
+      <div class="auth">
+        <a href="#">Join</a>
+        <a href="#">Log In</a>
+      </div>
+    </div>
+  </header>
+
+  <section class="hero">
+    <h1>Build amazing things</h1>
+    <p>
+      Essential JavaScript development tools that help you
+      go to market faster and build powerful applications
+      using modern open source code.
+    </p>
+    <div class="hero-buttons">
+      <button class="primary">See plans</button>
+      <button class="secondary">Join for free</button>
+    </div>
+  </section>
+
+  <section class="hexagon">
+    <img src="images/triangle-hexagon.svg" alt="hexagon">
+  </section>
+
+  <section class="features">
+    <div class="features-title">
+      <h2>Bring the best of open source to your company</h2>
+    </div>
+
+    <p class="features-text">
+      npm is the tool used by over 11,000,000 JavaScript developers around the world.
+      Your developers already use it. Your company depends on it.
+      Create an Org and get more out of the tools your team already knows and loves.
+    </p>
+
+    <div class="cards">
+      <div class="card">
+        <img src="images/zero-configuration.svg" alt="">
+        <h3>Zero configuration</h3>
+        <p>Create an org, add your team, and start collaborating.</p>
+      </div>
+
+      <div class="card">
+        <img src="images/team-management.svg" alt="">
+        <h3>Team management</h3>
+        <p>Control who has access to what modules with team management capabilities.</p>
+      </div>
+
+      <div class="card">
+        <img src="images/familiar-features.svg" alt="">
+        <h3>Familiar features</h3>
+        <p>npm Orgs has 100% parity with all public npm registry features.</p>
+      </div>
+
+      <div class="card">
+        <img src="images/npm-audit.svg" alt="">
+        <h3>npm audit</h3>
+        <p>Enjoy security auditing features built into the npm client.</p>
+      </div>
+    </div>
+
+    <button class="org-button">Create an Org</button>
+  </section>
+
+</body>
+</html>
